# mvp-orbit

./: .dockerignore  .gitignore  Dockerfile  README.md  README.zh-CN.md  SKILL.md  install-skills.sh  pyproject.toml
.codex/skills/mvp-orbit-cli/: SKILL.md
.codex/skills/mvp-orbit-cli/agents/: openai.yaml
.codex/skills/mvp-orbit-cli/references/: cli-flow.md
demo/: command.json  test.py
skills/mvp-orbit-cli/: SKILL.md
skills/mvp-orbit-cli/references/: cli-flow.md
src/mvp_orbit/: config.py
src/mvp_orbit/agent/: main.py  runtime.py  service.py
src/mvp_orbit/cli/: main.py  package.py
src/mvp_orbit/client/: main.py  runtime.py  service.py
src/mvp_orbit/core/: canonical.py  logging.py  models.py  signing.py  tickets.py
src/mvp_orbit/hub/: app.py  store.py
src/mvp_orbit/integrations/: object_store.py
tests/: helpers.py  test_cli_keys.py  test_command_flow.py  test_config.py  test_github_gh_backend.py  test_huggingface_backend.py  test_object_ids.py  test_package_builder.py  test_run_flow.py
