[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvp-orbit"
version = "0.4.0"
description = "Secure dual-channel remote debug runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "httpx>=0.27",
  "cryptography>=42",
  "questionary>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
orbit = "mvp_orbit.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
